tests/NormalTests/paczka1/fuzzy1/13939682.err
Error in line 2: Pio A141 74,9
Error in line 9: 0HXLYzt S946 -3,6
Error in line 3: Pio A452 30,8
Error in line 10: Pio A141 54,0
Error in line 20: zFnjtuy1 A141 96,1
Error in line 8: 6vm2 A452 3,9
Error in line 27: zFnjtuy1 S946 -2,1
Error in line 4: 0HXLYzt S946 40,2
